--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Guy-Norkunas/javascript-review-one#readme",
   "dependencies": {
+    "node-fetch": "^2.6.0",
     "readline-sync": "^1.4.10"
   }
 }
