Finished up to q24 part c, couldn't get that api to work :(

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Hexicans96/javascript-review-one/issues"
   },
-  "homepage": "https://github.com/Hexicans96/javascript-review-one#readme"
+  "homepage": "https://github.com/Hexicans96/javascript-review-one#readme",
+  "dependencies": {
+    "node-fetch": "^2.6.0"
+  }
 }
