--- a/package.json
+++ b/package.json
@@ -2,10 +2,24 @@
   "name": "javascript-review-one",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "git@github.com:Lanzhou-J/javascript-review-one.git",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/Lanzhou-J/javascript-review-one.git"
+  },
   "author": "Lanzhou Jiang <lzjiang99@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "fetch": "^1.1.0"
-  }
+    "fetch": "^1.1.0",
+    "readline-sync": "^1.4.10"
+  },
+  "bugs": {
+    "url": "https://github.com/Lanzhou-J/javascript-review-one/issues"
+  },
+  "homepage": "https://github.com/Lanzhou-J/javascript-review-one#readme",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "description": ""
 }
