--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "fetch": "^1.1.0",
+    "node-fetch": "^2.6.0",
     "readline-sync": "^1.4.10"
   },
   "bugs": {
